# browser-automation

./: README.md  pyproject.toml
src/automation_agent/: __init__.py  action_executor.py  browser_controller.py  cli.py
src/automation_agent/native_bridge/: bridge.py
tests/: test_browser_controller.py  test_planner.py
